// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner component renders correctly with all props 1`] = `
<div>
  <div
    class="styles__BannerContainer-sc-axrfnm-0 gedPDS success"
    data-testid="banner-test"
    id="banner-1"
  >
    <div
      class="styles__ContentWrapper-sc-axrfnm-1 bApWvA"
    >
      <svg
        class="fk-icon"
        color="#108934"
        height="20px"
        style="fill: currentColor; stroke: currentColor;"
        viewBox="0 -960 960 960"
        width="20px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          CheckCircle
        </title>
        <path
          d="m421-389-98-98q-9-9-22-9t-23 10q-9 9-9 22t9 22l122 123q9 9 21 9t21-9l239-239q10-10 10-23t-10-23q-10-9-23.5-8.5T635-603L421-389Zm59 309q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-156t86-127Q252-817 325-848.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 82-31.5 155T763-197.5q-54 54.5-127 86T480-80Zm0-60q142 0 241-99.5T820-480q0-142-99-241t-241-99q-141 0-240.5 99T140-480q0 141 99.5 240.5T480-140Zm0-340Z"
        />
      </svg>
      <div
        class="styles__TagContainer-sc-1qkmyn8-0 gTLZvS"
      >
        <div
          class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
        >
          Custom Tag
        </div>
      </div>
      <div
        class="styles__PrimaryText-sc-axrfnm-2 eEkDgv"
      >
        Primary Text
      </div>
      <div
        class="styles__SecondaryText-sc-axrfnm-3 gRqfCz"
      >
        Secondary Text
      </div>
      <div
        class="styles__TertiaryText-sc-axrfnm-4 joaByB"
      >
        Tertiary Text
      </div>
      <div
        class="styles__FlexConatiner-sc-m0xo0e-0 styles__StyledContainer-sc-m0xo0e-1 QCbyf flLbAR"
      >
        <button
          aria-disabled="false"
          class="styles__StyledButton-sc-5pc2aq-1 iaZGGY inline "
          type="button"
        >
          <div
            class="styles__FlexConatiner-sc-5pc2aq-0 styles__PrefixContainer-sc-5pc2aq-6 YjfA"
            data-testid="add-icon"
          >
            <svg
              class="fk-icon"
              color="#2a55e5"
              height="20px"
              style="fill: currentColor; stroke: currentColor;"
              viewBox="0 -960 960 960"
              width="20px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Add
              </title>
              <path
                d="M450-450H230q-12.75 0-21.375-8.675-8.625-8.676-8.625-21.5 0-12.825 8.625-21.325T230-510h220v-220q0-12.75 8.675-21.375 8.676-8.625 21.5-8.625 12.825 0 21.325 8.625T510-730v220h220q12.75 0 21.375 8.675 8.625 8.676 8.625 21.5 0 12.825-8.625 21.325T730-450H510v220q0 12.75-8.675 21.375-8.676 8.625-21.5 8.625-12.825 0-21.325-8.625T450-230v-220Z"
              />
            </svg>
          </div>
        </button>
        <button
          aria-disabled="false"
          class="styles__StyledButton-sc-5pc2aq-1 iaZGGY inline "
          type="button"
        >
          <span
            class="styles__BtnChild-sc-5pc2aq-2 cBBqTe"
          >
            Button
          </span>
        </button>
      </div>
    </div>
    <div
      class="styles__IconWrapper-sc-axrfnm-5 crvyYG"
      data-testid="icon-wrapper"
    >
      <svg
        class="fk-icon"
        color=""
        height="20px"
        style="fill: currentColor; stroke: currentColor;"
        viewBox="0 -960 960 960"
        width="20px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Close
        </title>
        <path
          d="M480-438 270-228q-9 9-21 9t-21-9q-9-9-9-21t9-21l210-210-210-210q-9-9-9-21t9-21q9-9 21-9t21 9l210 210 210-210q9-9 21-9t21 9q9 9 9 21t-9 21L522-480l210 210q9 9 9 21t-9 21q-9 9-21 9t-21-9L480-438Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Banner component renders correctly without buttonGroupProps and tag props 1`] = `
<div>
  <div
    class="styles__BannerContainer-sc-axrfnm-0 gedPDS success"
    data-testid="banner-test"
    id="banner-2"
  >
    <div
      class="styles__ContentWrapper-sc-axrfnm-1 bApWvA"
    >
      <svg
        class="fk-icon"
        color="#108934"
        height="20px"
        style="fill: currentColor; stroke: currentColor;"
        viewBox="0 -960 960 960"
        width="20px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          CheckCircle
        </title>
        <path
          d="m421-389-98-98q-9-9-22-9t-23 10q-9 9-9 22t9 22l122 123q9 9 21 9t21-9l239-239q10-10 10-23t-10-23q-10-9-23.5-8.5T635-603L421-389Zm59 309q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-156t86-127Q252-817 325-848.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 82-31.5 155T763-197.5q-54 54.5-127 86T480-80Zm0-60q142 0 241-99.5T820-480q0-142-99-241t-241-99q-141 0-240.5 99T140-480q0 141 99.5 240.5T480-140Zm0-340Z"
        />
      </svg>
      <div
        class="styles__TagContainer-sc-1qkmyn8-0 iQRtCb"
      >
        <div
          class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
        >
          Success
        </div>
      </div>
      <div
        class="styles__PrimaryText-sc-axrfnm-2 eEkDgv"
      >
        Primary Text
      </div>
      <div
        class="styles__SecondaryText-sc-axrfnm-3 gRqfCz"
      >
        Secondary Text
      </div>
      <div
        class="styles__TertiaryText-sc-axrfnm-4 joaByB"
      >
        Tertiary Text
      </div>
    </div>
    <div
      class="styles__IconWrapper-sc-axrfnm-5 crvyYG"
      data-testid="icon-wrapper"
    >
      <svg
        class="fk-icon"
        color=""
        height="20px"
        style="fill: currentColor; stroke: currentColor;"
        viewBox="0 -960 960 960"
        width="20px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Close
        </title>
        <path
          d="M480-438 270-228q-9 9-21 9t-21-9q-9-9-9-21t9-21l210-210-210-210q-9-9-9-21t9-21q9-9 21-9t21 9l210 210 210-210q9-9 21-9t21 9q9 9 9 21t-9 21L522-480l210 210q9 9 9 21t-9 21q-9 9-21 9t-21-9L480-438Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Banner component renders correctly without major optional props 1`] = `
<div>
  <div
    class="styles__BannerContainer-sc-axrfnm-0 gedPDS success"
    data-testid="banner-test"
    id="banner-4"
  >
    <div
      class="styles__ContentWrapper-sc-axrfnm-1 bApWvA"
    >
      <svg
        class="fk-icon"
        color="#108934"
        height="20px"
        style="fill: currentColor; stroke: currentColor;"
        viewBox="0 -960 960 960"
        width="20px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          CheckCircle
        </title>
        <path
          d="m421-389-98-98q-9-9-22-9t-23 10q-9 9-9 22t9 22l122 123q9 9 21 9t21-9l239-239q10-10 10-23t-10-23q-10-9-23.5-8.5T635-603L421-389Zm59 309q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-156t86-127Q252-817 325-848.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 82-31.5 155T763-197.5q-54 54.5-127 86T480-80Zm0-60q142 0 241-99.5T820-480q0-142-99-241t-241-99q-141 0-240.5 99T140-480q0 141 99.5 240.5T480-140Zm0-340Z"
        />
      </svg>
      <div
        class="styles__TagContainer-sc-1qkmyn8-0 iQRtCb"
      >
        <div
          class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
        >
          Success
        </div>
      </div>
      <div
        class="styles__PrimaryText-sc-axrfnm-2 eEkDgv"
      >
        Primary Text
      </div>
      <div
        class="styles__SecondaryText-sc-axrfnm-3 gRqfCz"
      />
    </div>
    <div
      class="styles__IconWrapper-sc-axrfnm-5 crvyYG"
      data-testid="icon-wrapper"
    >
      <svg
        class="fk-icon"
        color=""
        height="20px"
        style="fill: currentColor; stroke: currentColor;"
        viewBox="0 -960 960 960"
        width="20px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Close
        </title>
        <path
          d="M480-438 270-228q-9 9-21 9t-21-9q-9-9-9-21t9-21l210-210-210-210q-9-9-9-21t9-21q9-9 21-9t21 9l210 210 210-210q9-9 21-9t21 9q9 9 9 21t-9 21L522-480l210 210q9 9 9 21t-9 21q-9 9-21 9t-21-9L480-438Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Banner component renders correctly without onCloseButtonClick, ButtonGroup, Tag props 1`] = `
<div>
  <div
    class="styles__BannerContainer-sc-axrfnm-0 gedPDS success"
    data-testid="banner-test"
    id="banner-3"
  >
    <div
      class="styles__ContentWrapper-sc-axrfnm-1 bApWvA"
    >
      <svg
        class="fk-icon"
        color="#108934"
        height="20px"
        style="fill: currentColor; stroke: currentColor;"
        viewBox="0 -960 960 960"
        width="20px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          CheckCircle
        </title>
        <path
          d="m421-389-98-98q-9-9-22-9t-23 10q-9 9-9 22t9 22l122 123q9 9 21 9t21-9l239-239q10-10 10-23t-10-23q-10-9-23.5-8.5T635-603L421-389Zm59 309q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-156t86-127Q252-817 325-848.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 82-31.5 155T763-197.5q-54 54.5-127 86T480-80Zm0-60q142 0 241-99.5T820-480q0-142-99-241t-241-99q-141 0-240.5 99T140-480q0 141 99.5 240.5T480-140Zm0-340Z"
        />
      </svg>
      <div
        class="styles__TagContainer-sc-1qkmyn8-0 iQRtCb"
      >
        <div
          class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
        >
          Success
        </div>
      </div>
      <div
        class="styles__PrimaryText-sc-axrfnm-2 eEkDgv"
      >
        Primary Text
      </div>
      <div
        class="styles__SecondaryText-sc-axrfnm-3 gRqfCz"
      >
        Secondary Text
      </div>
      <div
        class="styles__TertiaryText-sc-axrfnm-4 joaByB"
      >
        Tertiary Text
      </div>
    </div>
    <div
      class="styles__IconWrapper-sc-axrfnm-5 crvyYG"
      data-testid="icon-wrapper"
    >
      <svg
        class="fk-icon"
        color=""
        height="20px"
        style="fill: currentColor; stroke: currentColor;"
        viewBox="0 -960 960 960"
        width="20px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Close
        </title>
        <path
          d="M480-438 270-228q-9 9-21 9t-21-9q-9-9-9-21t9-21l210-210-210-210q-9-9-9-21t9-21q9-9 21-9t21 9l210 210 210-210q9-9 21-9t21 9q9 9 9 21t-9 21L522-480l210 210q9 9 9 21t-9 21q-9 9-21 9t-21-9L480-438Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Banner component renders correctly without optional props 1`] = `
<div>
  <div
    class="styles__BannerContainer-sc-axrfnm-0 gedPDS success"
  >
    <div
      class="styles__ContentWrapper-sc-axrfnm-1 bApWvA"
    >
      <svg
        class="fk-icon"
        color="#108934"
        height="20px"
        style="fill: currentColor; stroke: currentColor;"
        viewBox="0 -960 960 960"
        width="20px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          CheckCircle
        </title>
        <path
          d="m421-389-98-98q-9-9-22-9t-23 10q-9 9-9 22t9 22l122 123q9 9 21 9t21-9l239-239q10-10 10-23t-10-23q-10-9-23.5-8.5T635-603L421-389Zm59 309q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-156t86-127Q252-817 325-848.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 82-31.5 155T763-197.5q-54 54.5-127 86T480-80Zm0-60q142 0 241-99.5T820-480q0-142-99-241t-241-99q-141 0-240.5 99T140-480q0 141 99.5 240.5T480-140Zm0-340Z"
        />
      </svg>
      <div
        class="styles__TagContainer-sc-1qkmyn8-0 iQRtCb"
      >
        <div
          class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
        >
          Success
        </div>
      </div>
      <div
        class="styles__SecondaryText-sc-axrfnm-3 gRqfCz"
      />
    </div>
    <div
      class="styles__IconWrapper-sc-axrfnm-5 crvyYG"
      data-testid="icon-wrapper"
    >
      <svg
        class="fk-icon"
        color=""
        height="20px"
        style="fill: currentColor; stroke: currentColor;"
        viewBox="0 -960 960 960"
        width="20px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Close
        </title>
        <path
          d="M480-438 270-228q-9 9-21 9t-21-9q-9-9-9-21t9-21l210-210-210-210q-9-9-9-21t9-21q9-9 21-9t21 9l210 210 210-210q9-9 21-9t21 9q9 9 9 21t-9 21L522-480l210 210q9 9 9 21t-9 21q-9 9-21 9t-21-9L480-438Z"
        />
      </svg>
    </div>
  </div>
</div>
`;
